--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,3 +24,5 @@ sources:
     notes: libretto, Johann Christian & Georg Christopher Berling, Copenhagen
 imslp:
 parts:
+  ob1: Oboe grande I
+  ob2: Oboe grande II
