was für martern; mich dürstet

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -4,7 +4,7 @@ composer:
 title: Der wundervolle Tod des Welterlösers
 id: SchW online B2:313
 genre: oratory
-scoring: 3 S, 5 T, 3 B (solo), S, A, T, B (coro 1), S, A, T, B (coro 2), 2 fl, 2 ob, 2 ob grande, 2 fag, 2 cor (D), timp, 2 vl, vla, b, bc
+scoring: 3 S, 5 T, 3 B (solo), 2 S, T, B (coro 1), 2 S, T, B (coro 2), 2 fl, 2 ob, 2 ob grande, fag, 2 cor (D), 2 vl, 2 vla, b, bc
 license: cc-by-sa-4.0
 sources:
   A1:
