du wirst, o herr

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,10 +1,11 @@
 composer:
   last: Scheibe
   first: Johann Adolph
-title: Der wundervolle Tod des Welterlösers
+title: Der wundervolle Tod des Welterlöſers
+subtitle: Ein Oratorium. Erſter Theil.
 id: SchW online B2:313
 genre: oratory
-scoring: 3 S, 5 T, 3 B (solo), 2 S, T, B (coro 1), 2 S, T, B (coro 2), 2 fl, 2 ob, 2 ob grande, fag, 2 cor (D), 2 vl, 2 vla, b, bc
+scoring: 3 S, 4 T, 3 B (solo), 2 S, T, B (coro 1), 2 S, T, B (coro 2), 2 fl, 2 ob, 2 ob grande, 2 fag, 2 cor (D), 2 vl, 2 vla, b, bc
 license: cc-by-sa-4.0
 sources:
   A1:
@@ -26,5 +27,6 @@ imslp:
 parts:
   ob1: Oboe I\\Oboe grande I
   ob2: Oboe I\\Oboe grande II
+  fag: Fagotto solo\\Fagotto I, II
   cor12: Corno I, II in D
   vla: Viola I, II
